Add Rust item system and continue Java modernization
Rust:
- Add comprehensive item.rs with ItemDef, CombatBonuses, ItemRequirements
- Include ItemRepository with default game items (weapons, armor, food, runes)
- Support for equipment slots, item categories, and stackable items

Java:
- CombatFormula.java: Convert rangedPowerRetro to switch expression
- Point.java: Use String.formatted() for coordinate formatting
- Packet.java: Use String.formatted() and var keyword